day 2 excercise completed.

--- a/week1/day1.ipynb
+++ b/week1/day1.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "00743dac-0e70-45b7-879a-d7293a6f68a6",
    "metadata": {},
    "outputs": [
@@ -792,11 +792,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"phrase\": \"mola mocho\",\n",
-      "    \"meaning\": \"es muy guay\",\n",
+      "    \"phrase\": \"es medio maruja\",\n",
+      "    \"meaning\": \"es una persona interesada en chismes o temas cotidianos de manera exagerada\",\n",
       "    \"region\": \"Andalucía\"\n",
       "}\n",
-      "La frase: mola mocho significa es muy guay en la región de Andalucía\n"
+      "La frase: es medio maruja significa es una persona interesada en chismes o temas cotidianos de manera exagerada en la región de Andalucía\n"
      ]
     }
    ],
